# M051makefile

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.c
